--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header><%= render 'header' %></header>
+    <main><%= yield %></main>
+    <footer><%= render 'footer' %></footer>
   </body>
 </html>
