--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -1,17 +1,19 @@
-<%= form_with url: registrations_path, method: :post, scope: :user do |f| %>
-  <div class="field">
+<%= form_with url: registrations_path, method: :post, scope: :user, class: 'simple_form form-horizontal' do |f| %>
+  <legend class="text-center mb-4"><%= t('.legend') %></legend>
+  <div class="form-label-group">
     <%= f.label :email, t('email', scope: 'activemodel.attributes.user') %><br />
-    <%= f.text_field :email %>
+    <%= f.text_field :email, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-label-group">
     <%= f.label :password, t('password', scope: 'activemodel.attributes.user') %><br />
-    <%= f.password_field :password %>
+    <%= f.password_field :password, class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-label-group">
     <%= f.label :password_confirmation, t('password_confirmation', scope: 'activemodel.attributes.user') %><br />
-    <%= f.password_field :password_confirmation %>
+    <%= f.password_field :password_confirmation, class: 'form-control' %>
   </div>
   <div class="actions">
-    <%= f.submit t(".register") %>
+    <%= f.submit t(".register"), class: 'btn-sm btn-primary btn-max-width' %>
+    <%= link_to t('.login'), login_path, type: 'button', class: 'btn-sm btn-primary btn-max-width' %>
   </div>
 <% end %>
