Tasks CRUD actions: create, read and update, adding haml, fixing translations

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -8,7 +8,7 @@
     <div id='mainMenu' class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to t('.tastk'), '', class: "#{menu_active?('tasks')} nav-item nav-link" %>
+          <%= link_to t('.tasks'), tasks_path, class: "#{menu_active?('tasks')} nav-item nav-link" %>
         </li>
         <!--<li class="nav-item.dropdown">-->
           <%#= link_to , '', class: "#{menu_active?('tasks')} nav-item nav-link" %>
