--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -281,6 +281,36 @@ tr.with-inputs {
 }
 
 // forms
+.simple_form.customized {
+  .col-sm-6 {
+    margin-bottom: 15px;
+  }
+  .input.boolean {
+    padding-top: 25px
+  }
+
+  label {
+    width: calc(100% - 35px);
+  }
+  input[type='checkbox'] {
+    margin-right: 15px;
+  }
+
+  input[type='date'],
+  input[type='datetime-local'],
+  input[type='text'] {
+    display: block;
+    width: 100%;
+    height: 39px;
+  }
+
+  textarea {
+    height: 130px;
+    display: block;
+    width: 100%;
+  }
+}
+
 .no-appendix {
   .input-group > .form-control:not(:last-child),
   .input-group > .custom-select:not(:last-child),
