--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,6 @@
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
-//@import "bootstrap-datepicker";
-//@import "bootstrap-select/dist/css/bootstrap-select";
+@import "bootstrap-datepicker";
 @import "floating-labels";
 @import "sessions";
 
