--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -4,7 +4,7 @@
   .row
     .col-sm-1
     .col-sm-10
-      = simple_form_for @form, html: { class: 'customized' } do |f|
+      = simple_form_for @form, html: { class: 'customized', data: { turbo: "false" } } do |f|
         = render 'form', f: f
 
     .col-sm-2
