--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,15 @@ hr.white { border-color: #fff; }
   .nav-link.active { color: #495057; }
 }
 
+// text formatting - colors
+.text-alert { color: #dc3545 }
+
+// lists
+.no-bullets {
+  list-style: none;
+  padding-left: 0;
+}
+
 .datepicker { padding: 0.375rem 0.75rem; } // fix
 .form-check-input.is-valid ~ .form-check-label { color: #212529; } // fix
 
@@ -73,13 +82,13 @@ hr.white { border-color: #fff; }
   }
   .card-body { padding: 40px; }
   .link { display: none; }
-}
 
-#new-company-popup .close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  z-index: 10;
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    z-index: 10;
+  }
 }
 
 .avatar {
@@ -137,6 +146,18 @@ a.btn, .btn {
     text-decoration: none !important;
   }
 }
+
+.btn-md {
+  display: inline-block;
+  padding: 0.25rem 0.3rem;
+  height: 50px;
+  border-width: 1px;
+  &:hover {
+    text-decoration: none !important;
+  }
+}
+
+.btn-centered { margin: auto; }
 
 // contract index
 .fixed-btn-width .btn { width: 85%; }
@@ -198,11 +219,11 @@ form .card {
 }
 
 .table .summed { border-bottom-width: 3px; }
-// rozjasnienie dla table-striped
+// lighter for table-striped
 .table-striped tbody tr:nth-of-type(odd) {
   background-color: rgba(0, 0, 0, 0.03);
 }
-// podswietlenie tabeli
+// highlighting table
 .table-hover tbody tr:hover {
   background-color: #fffde7 !important;
 }
@@ -243,7 +264,6 @@ tr.with-inputs {
 }
 
 //search-form
-
 .show-search-form-js { display: none; }
 .search-form {
   padding: 20px 0;
