--- a/app/views/registrations/_form.html.erb
+++ b/app/views/registrations/_form.html.erb
@@ -12,8 +12,7 @@
     <%= f.label :password_confirmation, t('password_confirmation', scope: 'activemodel.attributes.user') %><br />
     <%= f.input :password_confirmation, class: 'form-control', label: false %>
   </div>
-  <div class="actions">
-    <%= f.submit t(".register"), class: 'btn-sm btn-primary btn-max-width' %>
-    <%= link_to t('.login'), login_path, type: 'button', class: 'btn-sm btn-primary btn-max-width' %>
+  <div class="actions text-center">
+    <%= f.submit t(".register"), class: 'btn btn-md btn-primary btn-max-width mt-4' %>
   </div>
 <% end %>
