--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -2,3 +2,10 @@
 <%= render 'application/flash' %>
 
 <%= render 'form' %>
+
+<ul class="no-bullets text-center h4 mb-4 font-weight-normal">
+  <li>
+    <%= t('.login_to_your_account') %>
+    <%= link_to t('.login'), login_path %>
+  </li>
+</ul>
