--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -14,7 +14,7 @@
     <div class="container-fluid login">
       <div class="login-box">
         <%= image_tag 'icon.png', alt: 'logo', class: 'favicon mb-4' %>
-        <h1 class="text-center">TaskApp</h1>
+        <h1 class="text-center">StartApp</h1>
         <%= yield %>
       </div>
     </div>
