--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -7,3 +7,6 @@
   %li
     = t('.login_to_your_account')
     = link_to t('.login'), login_path
+  %li
+    = t('.forgot_password')
+    = link_to t('.reset_password'), new_password_reset_path
