--- a/app/views/user_mailer/activation_needed_email.html.haml
+++ b/app/views/user_mailer/activation_needed_email.html.haml
@@ -1,4 +1,4 @@
 %h1 User#activation_needed_email
 
 %p= @user.email
-%p= link_to 'Activation token', @activation_url
+%p= link_to 'Activation link', @activation_url
