--- a/app/views/password_resets/edit.html.haml
+++ b/app/views/password_resets/edit.html.haml
@@ -2,13 +2,13 @@
 = render 'application/flash'
 
 = simple_form_for @form, url: password_reset_path(@token), method: :patch, scope: :user, class: 'simple_form form-horizontal', data: { turbo: "false" } do |f|
-  %legend.text-center.mb-4= t('.legend')
+  %fieldset
+    %legend.text-center.mb-4= t('.legend')
 
-  = render 'password_fields', f: f
+    = render 'password_fields', f: f
 
-  .actions.text-center
-    = f.submit t(".reset"), class: 'btn-sm btn-primary btn-max-width'
-
+    .actions.text-center
+      = f.submit t(".reset"), class: 'btn-sm btn-primary btn-max-width'
 
 %ul.text-center.mb-4.font-weight-normal
   %li
