--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <%= link_to 'TaskApp', root_path, class: 'navbar-brand' %>
+    <%= link_to 'StartApp', root_path, class: 'navbar-brand' %>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false", aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
